# Strata

./: .gitignore  08.08.2025_print_debug_unify_calls.md  14.08.2025-py-aliases.csv  14.08.2025-py.csv  15.08.2025-py-aliases-fix-hash-fix-axioms.csv  15.08.2025-py-aliases-fix-hash.csv  15.08.2025-py-aliases.csv  16.08.2025-py-aliases-fix-hash-fix-axioms.csv  AGENTS.md  ALPHAEQUIV_RENAMESUBST_PLAN.md  B3_GRAMMAR_FIXES.md  BoogieToCBMC.lean  BoogieToGoto.lean  CLAUDE.md  COMMENTS_475.md  CONTRIBUTING.md  CURRENT_PLAN.md  Demo.lean  DiffTestCore.lean  FUNCTYPE_SOUNDNESS_PROGRESS.md  FUNCTYPE_SOUNDNESS_SIMPLIFICATION.md  FUNCTYPE_SOUND_PLAN.md  FindMax.lean  IContractSpecs.lean  JOSH_REVIEW_COMMENTS.md  LICENSE  LOCAL_FUNCTION_TYPEVAR_LEVELS.md  MERGE_NOTES.md  MetadataAnnotation.md  PR.md  PR499_REVIEW_COMMENTS.json  PR499_REVIEW_SUMMARY.md  PROOF_COMPLETE.md  PROOF_FINAL_REPORT.md  PROOF_PROGRESS.md  PYTHON_LAUREL_IMPLEMENTATION_PLAN.md  PYTHON_LAUREL_RESULTS.md  Performance_analysis.ipynb  Problem.lean  PurityPlugin.lean  (+84 more)
StrataAgent/: .gitignore  clean_run.sh  clone_strata_agent.sh  install_ripgrep.sh  kill_dashboard.sh  lean_mcp_setup.sh  main.py  plan.md  pyproject.toml  run_dashboard.py  setup.sh  start_dashboard.sh
StrataAgent/LeanTools/: Base64.lean  Main.lean
StrataAgent/strataswarm/: README.md  __init__.py  _agent.py  _backend.py  _channels.py  _checkpoint.py  _claude_backend.py  _helpers.py  _lean_tools_mcp.py  _ledger_mcp.py  _messaging.py  _nudge.py  _registry.py  _result_parsers.py  _server.py  _session_log.py  _spawn.py  _swarm.py  _tokens.py  _tools.py  (+5 more)
(+3977 files in other folders)
